tests/error/override_static2.gw
#! [contains] but cannot override
class C
{
	fun void test() {}
}

class D extends C
{
	fun static void test() {}
}
